Fix overflow bug with events widget

--- a/css/widgets.css
+++ b/css/widgets.css
@@ -60,8 +60,10 @@
 .widget_ctc-events .ctc-image {
   float: right;
   width: 30%;
-  margin-left: 1em;
-  margin-left: 1rem;
+}
+
+.widget_ctc-events .ctc-widget-entry {
+  overflow: hidden;
 }
 
 .widget_ctc-events .ctc-widget-entry-meta li {
@@ -72,6 +74,15 @@
 
 .widget_ctc-events .ctc-widget-entry-content p {
   margin: 0;
+}
+
+.widget_ctc-events .ctc-widget-entry-title,
+.widget_ctc-events .ctc-widget-entry-meta {
+  float: left;
+  width: 70%;
+  padding-right: 1em;
+  padding-right: 1rem;
+  box-sizing: border-box;
 }
 
 .widget_ctc-gallery {
